Changes in version 0.2.0.2-alpha - 2007-??-??
  o Major bugfixes on 0.2.0.1-alpha:
    - Fix an assertion failure related to servers without extra-info digests.
      Resolves bugs 441 and 442.

  o Minor build issues:
    - Clear up some MIPSPro compiler warnings.


Changes in version 0.2.0.1-alpha - 2007-06-01
  o Major features, server usability:
    - New config options RelayBandwidthRate and RelayBandwidthBurst:
      a separate set of token buckets for relayed traffic. Right now
      relayed traffic is defined as answers to directory requests, and
      OR connections that don't have any local circuits on them.

  o Major features, client usability:
    - A client-side DNS proxy feature to replace the need for
      dns-proxy-tor: Just set "DNSPort 9999", and Tor will now listen
      for DNS requests on port 9999, use the Tor network to resolve them
      anonymously, and send the reply back like a regular DNS server.
      The code still only implements a subset of DNS.
    - Make PreferTunneledDirConns and TunnelDirConns work even when
      we have no cached directory info. This means Tor clients can now
      do all of their connections protected by TLS.

  o Major features, performance and efficiency:
    - Directory authorities accept and serve "extra info" documents for
      routers. These documents contain fields from router descriptors
      that aren't usually needed, and that use a lot of excess
      bandwidth. Once these fields are removed from router descriptors,
      the bandwidth savings should be about 60%. [Partially implements
      proposal 104.]
    - Servers upload extra-info documents to any authority that accepts
      them. Authorities (and caches that have been configured to download
      extra-info documents) download them as needed. [Partially implements
      proposal 104.]
    - Change the way that Tor buffers data that it is waiting to write.
      Instead of queueing data cells in an enormous ring buffer for each