@@ -1127,6 +1127,64 @@ parse_iso_time(const char *cp, time_t *t)
   return 0;
 }
 
+/** Given a <b>date</b> in one of the three formats allowed by HTTP (ugh),
+ * parse it into <b>tm</b>.  Return 0 on success, negative on failure. */
+int
+parse_http_time(const char *date, struct tm *tm)
+{
+  const char *cp;
+  char month[4];
+  char wkday[4];
+  int i;
+
+  tor_assert(tm);
+  memset(tm, 0, sizeof(*tm));
+
+  /* First, try RFC1123 or RFC850 format: skip the weekday.  */
+  if ((cp = strchr(date, ','))) {
+    ++cp;
+    if (sscanf(date, "%2d %3s %4d %2d:%2d:%2d GMT",
+               &tm->tm_mday, month, &tm->tm_year,
+               &tm->tm_hour, &tm->tm_min, &tm->tm_sec) == 6) {
+      /* rfc1123-date */
+      tm->tm_year -= 1900;
+    } else if (sscanf(date, "%2d-%3s-%2d %2d:%2d:%2d GMT",
+                      &tm->tm_mday, month, &tm->tm_year,
+                      &tm->tm_hour, &tm->tm_min, &tm->tm_sec) == 6) {
+      /* rfc850-date */
+    } else {
+      return -1;
+    }
+  } else {
+    /* No comma; possibly asctime() format. */
+    if (sscanf(date, "%3s %3s %2d %2d:%2d:%2d %4d",
+               wkday, month, &tm->tm_mday,
+               &tm->tm_hour, &tm->tm_min, &tm->tm_sec, &tm->tm_year) == 7) {
+      tm->tm_year -= 1900;
+    } else {
+      return -1;
+    }
+  }
+
+  month[4] = '\0';
+  /* Okay, now decode the month. */
+  for (i = 0; i < 12; ++i) {
+    if (!strcasecmp(MONTH_NAMES[i], month)) {
+      tm->tm_mon = i+1;
+    }
+  }
+
+  if (tm->tm_year < 0 ||
+      tm->tm_mon < 1  || tm->tm_mon > 12 ||
+      tm->tm_mday < 0 || tm->tm_mday > 31 ||
+      tm->tm_hour < 0 || tm->tm_hour > 23 ||
+      tm->tm_min < 0  || tm->tm_min > 59 ||
+      tm->tm_sec < 0  || tm->tm_sec > 61)
+    return -1; /* Out of range, or bad month. */
+
+  return 0;
+}
+
 /* =====
  * File helpers
  * ===== */
